--- a/locales/fr.json
+++ b/locales/fr.json
@@ -93,6 +93,9 @@
     "Close":"Fermer",
     "Other":"Autres",
     "Buy or Renew a Subscription": "Acheter ou renouveler un abonnement",
+    "It looks like you do not have a valid subscription to this tool yet":"Il semble que vous n'avez pas encore d'abonnement pour cet outil",
+    "It looks like your subscription has expired on":"Votre souscription a expiré le",
+    "Your subscription is still valid until":"Votre abonnement est valide jusqu'au",
     "Back to":"Retour à",
     "Renew":"Renouveler",
     "Subscription valid until":"Abonnement Valide jusqu'au",
