--- a/locales/fr.json
+++ b/locales/fr.json
@@ -62,6 +62,7 @@
     "Your alarms are currently disabled !":"Vos alarmes sont désactivées",
     "You Request couldn't not be handled":"Votre demande n'a pas pû être traitée",
     "Your location is not set. Distance settings won't be taken into account.":"Votre localisation n'est pas configurée. Les paramètres de distance ne seront pas pris en compte",
+    "Distance":"Distance",
     "Form":"Forme",
     "Gender":"Genre",
     "GENDER":"GENRE",
@@ -105,6 +106,7 @@
     "ALL Quests Cleaning":"Nettoyer TOUTES les Quêtes",
     "Your Location is not set and cannot be set here!":"Votre Localisation n'est pas configurée et ne peut pas l'être ici!",
     "Your Location is set to":"Votre Localisation est configurée sur",
+    "You have not set any area yet!": "Vous n'avez pas encore configuré de zones!",
     "Save changes":"Sauvegarder",
     "YOU ARE NOT REGISTERED!":"VOUS N'ÊTES PAS ENREGISTRÉ",
     "Please Register in Discord using":"Merci de vous enregistrer dans discord en utilisant",
