--- a/locales/fr.json
+++ b/locales/fr.json
@@ -57,7 +57,7 @@
     "PvP Great":"Ligue Super",
     "PvP Ultra":"Ligue Ultra",
     "MIN Rank":"Ranking Min",
-    "MIN Rank":"Ranking Max",
+    "MAX Rank":"Ranking Max",
     "AREAS":"ZONES",
     "Your alarms are currently disabled !":"Vos alarmes sont désactivées",
     "You Request couldn't not be handled":"Votre demande n'a pas pû être traitée",
