--- a/locales/de.json
+++ b/locales/de.json
@@ -74,8 +74,8 @@
     "No":"Nein",
     "Apply to all Pokémons":"Ja für ALLE Pokemon",
     "NEW MONSTER ALARM":"NEUER POKEMON ALARM",
-    "Type":"Typ",
-    "to display all Pokémons":"Klicken um alle Pokemon anzuzeigen",
+    "Type":"Tippe",
+    "to display all Pokémons":"um alle Pokemon anzuzeigen",
     "Search":"Suche",
     "Cancel":"Abbruch",
     "Submit":"Bestätigen",
