--- a/locales/de.json
+++ b/locales/de.json
@@ -80,10 +80,10 @@
     "Cancel":"Abbrechen",
     "Submit":"Übermitteln",
     "NEW RAID ALARM":"NEUER RAID ALARM",
-    "Select Egg Levels you want to add":"Sélectionnez les Niveaux d'oeufs à ajouter",
-    "Select Raid Levels you want to add":"Sélectionnez les Niveaux de Raids à ajouter",
-    "Select Pokémon Quests you want to add":"Sélectionner les Pokémons de quêtes à ajouter",
-    "Select the Raid Bosses you want to add":"Sélectionnez les Raids de Boss à ajouter",
+    "Select Egg Levels you want to add":"Wähle Ei Stufen aus, die du hinzufügen willst",
+    "Select Raid Levels you want to add":"Wähle Raid Stufen aus, die du hinzufügen willst",
+    "Select Pokémon Quests you want to add":"Wähle Quests aus, die du hinzufügen willst",
+    "Select the Raid Bosses you want to add":"Wählen Sie Raid Bosse aus, die du hinzufügen willst",
     "NEW QUEST ALARM":"NOUVELLE ALARME DE QUÊTE",
     "Select Pokémon Quests you want to add (Pokemons Currently available on Map)":"Sélectionnez les niveaux de qûetes que vous voulez ajouter",
     "Pokemons Currently available on Map":"Pokémons actuellement sur la carte",
