Update and rename pt-pt.json to pt.json

--- a/locales/pt.json
+++ b/locales/pt.json
@@ -103,7 +103,7 @@
     "Alerts":"Alarmes",
     "ALL Monters Cleaning":"Remover notificações expiradas de TODOS os Pokémons",
     "ALL Raid/Egg Cleaning":"Remover notificações expiradas de TODAS as Raids/Ovos",
-    "ALL Quests Cleaning":""Remover notificações expiradas de TODAS as Quests",
+    "ALL Quests Cleaning":"Remover notificações expiradas de TODAS as Quests",
     "Your Location is not set and cannot be set here!":"A tua localização não se encontra definida e não pode ser definida aqui!",
     "Your Location is set to":"A tua localização está definida para:",
     "You have not set any area yet!": "Ainda não definiste uma àrea!",
