--- a/locales/de.json
+++ b/locales/de.json
@@ -5,8 +5,8 @@
     "ALL Quests":"ALLE Quests",
     "ALL Raids/Eggs":"ALLE Raids/Eier",
     "CANCEL":"ABBRECHEN",
-    "Cleaning Activated":"Aufräumen aktiviert",
-    "Cleaning activated on":"Aufräumen aktiviert bei",
+    "Cleaning Activated":"Bereinigen aktiviert",
+    "Cleaning activated on":"Bereinigen aktiviert bei",
     "command":"Kommando",
     "CP":"WP",
     "DELETE":"LÖSCHEN",
@@ -28,7 +28,7 @@
     "RAIDS":"RAIDS",
     "Raids":"Raids",
     "Raids Level":"Raid Level",
-    "Settings updated successfully":"Einstellungen erfolgreich gespeichert",
+    "Settings updated successfully":"Einstellungen erfolgreich aktualisiert",
     "STATS":"STATS",
     "Successfully Added Monster Alarm":"POKÉMON Alarm(e) erfolgreich gespeichert",
     "Successfully Added Quest Alarm(s)":"QUEST Alarm(e) erfolgreich gespeichert",
@@ -69,7 +69,7 @@
     "All":"Alle",
     "Male":"Männlich",
     "Female":"Weiblich",
-    "Clean":"Säubern",
+    "Clean":"Bereinigen",
     "Yes":"Ja",
     "No":"Nein",
     "Apply to all Pokémons":"Auf alle Pokémon anwenden",
@@ -84,11 +84,11 @@
     "Select Raid Levels you want to add":"Wähle Raid Stufen aus, die du hinzufügen willst",
     "Select Pokémon Quests you want to add":"Wähle Quests aus, die du hinzufügen willst",
     "Select the Raid Bosses you want to add":"Wählen Sie Raid Bosse aus, die du hinzufügen willst",
-    "NEW QUEST ALARM":"NOUVELLE ALARME DE QUÊTE",
-    "Select Pokémon Quests you want to add (Pokemons Currently available on Map)":"Sélectionnez les niveaux de qûetes que vous voulez ajouter",
-    "Pokemons Currently available on Map":"Pokémons actuellement sur la carte",
-    "Or use search below to add another pokemon":"Ou utilisez la recherche pour ajouter un autre Pokémon",
-    "Select Quests Items you want to add":"Sélectionnez les objects de quête à ajouter",
+    "NEW QUEST ALARM":"NEUER QUEST ALARM,
+    "Select Pokémon Quests you want to add (Pokemons Currently available on Map)":"Wähle Pokémon-Quests aus, die du hinzufügen willst",
+    "Pokemons Currently available on Map":"Pokémon die aktuell auf der Map verfügbar sind",
+    "Or use search below to add another pokemon":"oder verwende die Suche um.ein anderes auszuwählen",
+    "Select Quests Items you want to add":"Wählen ein Quest Item aus, dass du hinzufügen willst.",
     "Level": "Niveau",
     "Update": "MAJ",
     "Close":"Fermer",
@@ -100,19 +100,19 @@
     "Back to":"Retour à",
     "Renew":"Renouveler",
     "Subscription valid until":"Abonnement Valide jusqu'au",
-    "Alerts":"Alarmes",
-    "ALL Monters Cleaning":"Nettoyer TOUS les Pokémons",
-    "ALL Raid/Egg Cleaning":"Nettoyer TOUS les Raids/Oeufs",
-    "ALL Quests Cleaning":"Nettoyer TOUTES les Quêtes",
-    "Your Location is not set and cannot be set here!":"Votre Localisation n'est pas configurée et ne peut pas l'être ici!",
+    "Alerts":"Alarme",
+    "ALL Monters Cleaning":"Alle Pokémon bereinigen",
+    "ALL Raid/Egg Cleaning":"Alle Raids / Eier bereinigen",
+    "ALL Quests Cleaning":"Alle Quests bereinigen",
+    "Your Location is not set and cannot be set here!":"Dein Standort ist nicht festgelegt und kann hier nicht festgelegt werden!",
     "Your Location is set to":"Votre Localisation est configurée sur",
-    "You have not set any area yet!": "Vous n'avez pas encore configuré de zones!",
-    "Save changes":"Sauvegarder",
+    "You have not set any area yet!": "Du hast mich kein Gebiet gewählt!",
+    "Save changes":"Änderungen speichern",
     "YOU ARE NOT REGISTERED!":"VOUS N'ÊTES PAS ENREGISTRÉ",
     "Please Register in Discord using":"Merci de vous enregistrer dans discord en utilisant",
     "before using this tool":"avant d'utiliser cet outil",
     "Do you really want to Leave?":"Voulez-vous vraiment quitter?",
     "Click 'Logout' below if you are ready to end your current session":"Cliquez sur 'Se déconnecter' ci-dessous pour terminer votre session",
-    "Logout":"Se déconnecter",
-    "Settings":"Paramètres"
+    "Logout":"Abmelden",
+    "Settings":"Einstellungen"
 }
