--- a/locales/de.json
+++ b/locales/de.json
@@ -89,30 +89,30 @@
     "Pokemons Currently available on Map":"Pokémon die aktuell auf der Map verfügbar sind",
     "Or use search below to add another pokemon":"oder verwende die Suche um.ein anderes auszuwählen",
     "Select Quests Items you want to add":"Wählen ein Quest Item aus, dass du hinzufügen willst.",
-    "Level": "Niveau",
-    "Update": "MAJ",
-    "Close":"Fermer",
-    "Other":"Autres",
+    "Level": "Level",
+    "Update": "Update",
+    "Close":"Schließen",
+    "Other":"Anderes",
     "Buy or Renew a Subscription": "Acheter ou renouveler un abonnement",
     "It looks like you do not have a valid subscription to this tool yet":"Il semble que vous n'avez pas encore d'abonnement pour cet outil",
     "It looks like your subscription has expired on":"Votre souscription a expiré le",
     "Your subscription is still valid until":"Votre abonnement est valide jusqu'au",
-    "Back to":"Retour à",
-    "Renew":"Renouveler",
+    "Back to":"Zurück zu",
+    "Renew":"Erneuern",
     "Subscription valid until":"Abonnement Valide jusqu'au",
     "Alerts":"Alarme",
     "ALL Monters Cleaning":"Alle Pokémon bereinigen",
     "ALL Raid/Egg Cleaning":"Alle Raids / Eier bereinigen",
     "ALL Quests Cleaning":"Alle Quests bereinigen",
     "Your Location is not set and cannot be set here!":"Dein Standort ist nicht festgelegt und kann hier nicht festgelegt werden!",
-    "Your Location is set to":"Votre Localisation est configurée sur",
+    "Your Location is set to":"Dein Standort lautet",
     "You have not set any area yet!": "Du hast mich kein Gebiet gewählt!",
     "Save changes":"Änderungen speichern",
-    "YOU ARE NOT REGISTERED!":"VOUS N'ÊTES PAS ENREGISTRÉ",
-    "Please Register in Discord using":"Merci de vous enregistrer dans discord en utilisant",
-    "before using this tool":"avant d'utiliser cet outil",
-    "Do you really want to Leave?":"Voulez-vous vraiment quitter?",
-    "Click 'Logout' below if you are ready to end your current session":"Cliquez sur 'Se déconnecter' ci-dessous pour terminer votre session",
+    "YOU ARE NOT REGISTERED!":"Du bist nicht registriert!",
+    "Please Register in Discord using":"Bitte registriere dich in Discord mit",
+    "before using this tool":"bevor du dieses Seite nutzen kannst.",
+    "Do you really want to Leave?":"Möchtest du die Seite wirklich verlassen?",
+    "Click 'Logout' below if you are ready to end your current session":"Klicke auf 'Abmelden' um die Session zu beenden",
     "Logout":"Abmelden",
     "Settings":"Einstellungen"
 }
