--- a/locales/de.json
+++ b/locales/de.json
@@ -61,7 +61,7 @@
     "AREAS":"GEBIETE",
     "Your alarms are currently disabled !":"Deine Alarme sind aktuell deaktiviert",
     "You Request couldn't not be handled":"Deine Eingabe konnte nicht verarbeitet werden",
-    "Your location is not set. Distance settings won't be taken into account.":"Deine Lokation ist nicht gesetzt. Distanzen werden nicht berücksichtigt.",
+    "Your location is not set. Distance settings won't be taken into account.":"Dein Standort ist nicht gesetzt. Distanzen werden nicht berücksichtigt.",
     "Distance":"Distanz",
     "Form":"Form",
     "Gender":"Geschlecht",
@@ -93,13 +93,13 @@
     "Update": "Update",
     "Close":"Schließen",
     "Other":"Anderes",
-    "Buy or Renew a Subscription": "Acheter ou renouveler un abonnement",
-    "It looks like you do not have a valid subscription to this tool yet":"Il semble que vous n'avez pas encore d'abonnement pour cet outil",
-    "It looks like your subscription has expired on":"Votre souscription a expiré le",
-    "Your subscription is still valid until":"Votre abonnement est valide jusqu'au",
+    "Buy or Renew a Subscription": "Abonnement kaufen oder verlängern",
+    "It looks like you do not have a valid subscription to this tool yet":"Du hast anscheinend noch kein gültiges Abonnement für dieses Tool",
+    "It looks like your subscription has expired on":"Dein Abonnement ist anscheinend abgelaufen",
+    "Your subscription is still valid until":"Dein Abonnement ist noch gültig bis",
     "Back to":"Zurück zu",
     "Renew":"Erneuern",
-    "Subscription valid until":"Abonnement Valide jusqu'au",
+    "Subscription valid until":"Abonnement gültig bis,
     "Alerts":"Alarme",
     "ALL Monters Cleaning":"Alle Pokémon bereinigen",
     "ALL Raid/Egg Cleaning":"Alle Raids / Eier bereinigen",
