--- a/locales/de.json
+++ b/locales/de.json
@@ -84,7 +84,7 @@
     "Select Raid Levels you want to add":"Wähle Raid Stufen aus, die du hinzufügen willst",
     "Select Pokémon Quests you want to add":"Wähle Quests aus, die du hinzufügen willst",
     "Select the Raid Bosses you want to add":"Wählen Sie Raid Bosse aus, die du hinzufügen willst",
-    "NEW QUEST ALARM":"NEUER QUEST ALARM,
+    "NEW QUEST ALARM":"NEUER QUEST ALARM",
     "Select Pokémon Quests you want to add (Pokemons Currently available on Map)":"Wähle Pokémon-Quests aus, die du hinzufügen willst",
     "Pokemons Currently available on Map":"Pokémon die aktuell auf der Map verfügbar sind",
     "Or use search below to add another pokemon":"oder verwende die Suche um.ein anderes auszuwählen",
