--- a/locales/de.json
+++ b/locales/de.json
@@ -99,7 +99,7 @@
     "Your subscription is still valid until":"Dein Abonnement ist noch gültig bis",
     "Back to":"Zurück zu",
     "Renew":"Erneuern",
-    "Subscription valid until":"Abonnement gültig bis,
+    "Subscription valid until":"Abonnement gültig bis",
     "Alerts":"Alarme",
     "ALL Monters Cleaning":"Alle Pokémon bereinigen",
     "ALL Raid/Egg Cleaning":"Alle Raids / Eier bereinigen",
