Rework german translation

--- a/locales/de.json
+++ b/locales/de.json
@@ -1,67 +1,67 @@
 {
-    "ADD":"HINZUFûGEN",
+    "ADD":"HINZUFÜGEN",
     "ALL":"ALLE",
-    "ALL Monsters":"ALLE POKEMON",
-    "ALL Quests":"ALLE QUESTS",
-    "ALL Raids/Eggs":"ALLE RAIDS & QUESTS",
+    "ALL Monsters":"ALLE POKÉMON",
+    "ALL Quests":"ALLE Quests",
+    "ALL Raids/Eggs":"ALLE Raids/Eier",
     "CANCEL":"ABBRECHEN",
-    "Cleaning Activated":"Löschen Aktiviert",
-    "Cleaning activated on":"Löschen aktivieren<br>",
+    "Cleaning Activated":"Bereinigen aktiviert",
+    "Cleaning activated on":"Bereinigen aktiviert bei",
     "command":"Kommando",
-    "CP":"CP",
-    "DELETE":"LÔSCHEN",
-    "DELETE ALL":"ALLES LÔSCHEN",
+    "CP":"WP",
+    "DELETE":"LÖSCHEN",
+    "DELETE ALL":"ALLE LÖSCHEN",
     "DISTANCE":"DISTANZ",
     "Eggs":"Eier",
-    "Eggs Level":"Ei Level",
-    "Error":"Error",
-    "GREAT":"GREAT",
+    "Eggs Level":"Eier Level",
+    "Error":"Fehler",
+    "GREAT":"Super",
     "IV":"IV",
-    "LEVEL":"LEVEL",
-    "meters":"meter",
-    "Please set it in discord using":"Bitte in Discord einstellen",
-    "POKÉMONS":"POKÉMONS",
-    "POKÉMONS TRACKED":"POKÉMONS TRACKED",
+    "LEVEL":"Level",
+    "meters":"Meter",
+    "Please set it in discord using":"Bitte setze es in Discord mit",
+    "POKÉMONS":"POKÉMON",
+    "POKÉMONS TRACKED":"POKÉMON TRACKED",
     "EGGS & RAIDS TRACKED":"EIER & RAIDS TRACKED",
     "QUESTS TRACKED":"QUESTS TRACKED",
     "QUESTS":"QUESTS",
     "RAIDS":"RAIDS",
     "Raids":"Raids",
-    "Raids Level":"Raids Level",
-    "Settings updated successfully":"Settings erfolgreich updated",
+    "Raids Level":"Raid Level",
+    "Settings updated successfully":"Einstellungen erfolgreich aktualisiert",
     "STATS":"STATS",
-    "Successfully Added Monster Alarm":"Erfolgreich gestzter Pokemon Alarm",
-    "Successfully Added Quest Alarm(s)":"Erfolgreich gestzter Quest Alarm(e)",
-    "Successfully Added Raids Alarm(s)":"Erfolgreich gestzter Raid Alarm(e)",
-    "Successfully Deleted Egg Alarm":"Erfolgreich gelöschter Ei Alarm",
-    "Successfully Deleted Eggs & Raids Alarm(s)":"Erfolgreich gelöschter Ei & Raid Alarm(e)",
-    "Successfully Deleted Monster Alarm(s)":"Erfolgreich gelöschter Pokemon Alarm(e)",
-    "Successfully Deleted Quest Alarm(s)":"Erfolgreich gelöschter Quest Alarm(e)",
-    "Successfully Deleted Raid Alarm(s)":"Erfolgreich gelöschter Raid Alarm(e)",
-    "Successfully Updated Egg Alarm":"Erfolgreich updated Ei Alarm",
-    "Successfully Updated List of Areas":"Erfolgreich updated Area Liste",
-    "Successfully Updated Monster Alarm":"Erfolgreich updated Pokemon Alarm",
-    "Successfully Updated Quest Alarm":"Erfolgreich updated Quest Alarm",
-    "Successfully Updated Raid Alarm":"Erfolgreich updated Raid Alarm",
-    "Delete ALL tracked Mons?":"Alle getrackten Pokemon löschen?",
-    "Delete ALL Raid/Eggs?":"Alle getrackten Raids/Eier löschen?",
-    "Delete ALL Quests?":"Alle getrackten Quests löschen?",
-    "This will delete all your Eggs & Raids Alarms and cannot be undone, are you sure ?":"Bist du dir sicher, dass du alle Raids und Eier Alarme löschen möchtest? Dies kann nicht rückgängig gemacht werden.",
-    "This will delete all your Pokémon Alarms and cannot be undone, are you sure ?":"Bist du dir sicher, dass du alle Pokemon Alarme löschen möchtest? Dies kann nicht rückgängig gemacht werden.",
-    "This will delete all your Quests Alarms and cannot be undone, are you sure ?":"Bist du dir sicher, dass du alle Quest Alarme löschen möchtest? Dies kann nicht rückgängig gemacht werden.",
-    "ULTRA":"ULTRA",
+    "Successfully Added Monster Alarm":"POKÉMON Alarm(e) erfolgreich gespeichert",
+    "Successfully Added Quest Alarm(s)":"QUEST Alarm(e) erfolgreich gespeichert",
+    "Successfully Added Raids Alarm(s)":"RAID Alarm(e) erfolgreich gespeichert",
+    "Successfully Deleted Egg Alarm":"Ei Alarm erfolgreich gelöscht",
+    "Successfully Deleted Eggs & Raids Alarm(s)":"Ei & Raid Alarm(e) erfolgreich gelöscht",
+    "Successfully Deleted Monster Alarm(s)":"POKÉMON Alarm erfolgreich gelöscht",
+    "Successfully Deleted Quest Alarm(s)":"QUEST Alarm(e) erfolgreich gelöscht",
+    "Successfully Deleted Raid Alarm(s)":"Raid Alarm(e) erfolgreich gelöscht",
+    "Successfully Updated Egg Alarm":"Ei Alarm erfolgreich aktuallisiert",
+    "Successfully Updated List of Areas":"Gebiete Liste erfolgreich aktuallisiert",
+    "Successfully Updated Monster Alarm":"POKÉMON Alarm erfolgreich aktuallisiert",
+    "Successfully Updated Quest Alarm":"Quest Alarm erfolgreich aktuallisiert",
+    "Successfully Updated Raid Alarm":"Raid Alarm erfolgreich aktuallisiert",
+    "Delete ALL tracked Mons?":"Alle getrackten POKÉMON löschen",
+    "Delete ALL Raid/Eggs?":"Alle Raids/Eier löschen",
+    "Delete ALL Quests?":"Alle Quests löschen",
+    "This will delete all your Eggs & Raids Alarms and cannot be undone, are you sure ?":"Das wird alle deine Eier und Raid Alarme löschen, bist du dir sicher?",
+    "This will delete all your Pokémon Alarms and cannot be undone, are you sure ?":"Das wird alle deine Pokémon Alarme löschen, bist du dir sicher?",
+    "This will delete all your Quests Alarms and cannot be undone, are you sure ?":"Das wird alle deine Quest Alarme löschen, bist du dir sicher?",
+    "ULTRA":"HYPER",
     "WEIGHT":"GEWICHT",
     "Weight":"Gewicht",
-    "MIN STATS":"MIN STATS",
-    "MAX STATS":"MAX STATS",
-    "PvP Great":"PvP Great",
-    "PvP Ultra":"PvP Ultra",
-    "MIN Rank":"MIN Rank",
-    "MIN Rank":"MIN Rank",
-    "AREAS":"AREAS",
+    "MIN STATS":"STATS MINIMUM",
+    "MAX STATS":"STATS MAXIMUM",
+    "PvP Great":"Superliga",
+    "PvP Ultra":"Hyperliga",
+    "MIN Rank":"Ranking Min",
+    "MAX Rank":"Ranking Max",
+    "AREAS":"GEBIETE",
     "Your alarms are currently disabled !":"Deine Alarme sind aktuell deaktiviert",
-    "You Request couldn't not be handled":"Deine Anfarge konnte nicht verarbeitet werden",
-    "Your location is not set. Distance settings won't be taken into account.":"Du hast keine Location gesetzt, Distanz einstellung konnte nicht übernommen werden.",
+    "You Request couldn't not be handled":"Deine Eingabe konnte nicht verarbeitet werden",
+    "Your location is not set. Distance settings won't be taken into account.":"Dein Standort ist nicht gesetzt. Distanzen werden nicht berücksichtigt.",
     "Distance":"Distanz",
     "Form":"Form",
     "Gender":"Geschlecht",
@@ -69,50 +69,50 @@
     "All":"Alle",
     "Male":"Männlich",
     "Female":"Weiblich",
-    "Clean":"Säubern",
+    "Clean":"Bereinigen",
     "Yes":"Ja",
     "No":"Nein",
-    "Apply to all Pokémons":"Ja für ALLE Pokemon",
-    "NEW MONSTER ALARM":"NEUER POKEMON ALARM",
-    "Type":"Tippe",
-    "to display all Pokémons":"um alle Pokemon anzuzeigen",
+    "Apply to all Pokémons":"Auf alle Pokémon anwenden",
+    "NEW MONSTER ALARM":"NEUER POKÉMON ALARM",
+    "Type":"Typ",
+    "to display all Pokémons":"um alle Pokémon anzuzeigen",
     "Search":"Suche",
-    "Cancel":"Abbruch",
-    "Submit":"Bestätigen",
+    "Cancel":"Abbrechen",
+    "Submit":"Übermitteln",
     "NEW RAID ALARM":"NEUER RAID ALARM",
-    "Select Egg Levels you want to add":"Klicke ein Ei Level das du hinzufügen möchtest",
-    "Select Raid Levels you want to add":"Klicke ein Raid Level das du hinzufügen möchtest",
-    "Select Pokémon Quests you want to add":"Klicke ein Quest Level das du hinzufügen möchtest",
-    "Select the Raid Bosses you want to add":"Klicke einen Raid Boss den du hinzufügen möchtest",
+    "Select Egg Levels you want to add":"Wähle Ei Stufen aus, die du hinzufügen willst",
+    "Select Raid Levels you want to add":"Wähle Raid Stufen aus, die du hinzufügen willst",
+    "Select Pokémon Quests you want to add":"Wähle Quests aus, die du hinzufügen willst",
+    "Select the Raid Bosses you want to add":"Wähle Raid Bosse aus, die du hinzufügen willst",
     "NEW QUEST ALARM":"NEUER QUEST ALARM",
-    "Select Pokémon Quests you want to add (Pokemons Currently available on Map)":"Klicke eine Pokemon Quest die du hinzufügen möchtest",
-    "Pokemons Currently available on Map":"Pokemon aktuell verfügbar",
-    "Or use search below to add another pokemon":"oder nutze die Suche um weitere Pokemon hinzuzufügen",
-    "Select Quests Items you want to add":"Klicke Quest Items die du hinzufügen möchtest",
+    "Select Pokémon Quests you want to add (Pokemons Currently available on Map)":"Wähle Pokémon-Quests aus, die du hinzufügen willst",
+    "Pokemons Currently available on Map":"Pokémon die aktuell auf der Map verfügbar sind",
+    "Or use search below to add another pokemon":"oder verwende die Suche um.ein anderes auszuwählen",
+    "Select Quests Items you want to add":"Wählen ein Quest Item aus, dass du hinzufügen willst.",
     "Level": "Level",
     "Update": "Update",
     "Close":"Schließen",
-    "Other":"Andere",
-    "Buy or Renew a Subscription": "Bitte stelle deine Rechte/Aktivierung wieder her",
-    "It looks like you do not have a valid subscription to this tool yet":"Es sieht so aus als hättest du keine gültigen Rechte/Aktivierung",
-    "It looks like your subscription has expired on":"Es sieht so aus als wären deine Rechte/Aktivierung abgelaufen",
-    "Your subscription is still valid until":"Deine Rechte/aktivierung sind noch gültig bis",
+    "Other":"Anderes",
+    "Buy or Renew a Subscription": "Abonnement kaufen oder verlängern",
+    "It looks like you do not have a valid subscription to this tool yet":"Du hast anscheinend noch kein gültiges Abonnement für dieses Tool",
+    "It looks like your subscription has expired on":"Dein Abonnement ist anscheinend abgelaufen",
+    "Your subscription is still valid until":"Dein Abonnement ist noch gültig bis",
     "Back to":"Zurück zu",
     "Renew":"Erneuern",
-    "Subscription valid until":"Rechte/Aktivierung gültig bis",
+    "Subscription valid until":"Abonnement gültig bis",
     "Alerts":"Alarme",
-    "ALL Monters Cleaning":"Alle Pokemon löschen",
-    "ALL Raid/Egg Cleaning":"Alle Raids/Eier löschen",
-    "ALL Quests Cleaning":"Alle Quests löschen",
-    "Your Location is not set and cannot be set here!":"Deine Location ist noch nicht gesetzt und kann auch hier nicht gesetzt werden!",
-    "Your Location is set to":"Deine Location ist gesetzt für",
-    "You have not set any area yet!": "Du hast noch keine gültige(n) Area(s) gesetzt!",
+    "ALL Monters Cleaning":"Alle Pokémon bereinigen",
+    "ALL Raid/Egg Cleaning":"Alle Raids / Eier bereinigen",
+    "ALL Quests Cleaning":"Alle Quests bereinigen",
+    "Your Location is not set and cannot be set here!":"Dein Standort ist nicht festgelegt und kann hier nicht festgelegt werden!",
+    "Your Location is set to":"Dein Standort lautet",
+    "You have not set any area yet!": "Du hast mich kein Gebiet gewählt!",
     "Save changes":"Änderungen speichern",
-    "YOU ARE NOT REGISTERED!":"DU BIST NICHT REGISTRIERT",
-    "Please Register in Discord using":"Bitte Registriere dich in Discord so",
-    "before using this tool":"bevor du dieses Tool benutzt",
-    "Do you really want to Leave?":"Möchtest du dich wirklich abmelden?",
-    "Click 'Logout' below if you are ready to end your current session":"Klicke 'Abmelden' um dich von der aktuellen Sitzung abzumelden",
+    "YOU ARE NOT REGISTERED!":"Du bist nicht registriert!",
+    "Please Register in Discord using":"Bitte registriere dich in Discord mit",
+    "before using this tool":"bevor du dieses Seite nutzen kannst.",
+    "Do you really want to Leave?":"Möchtest du die Seite wirklich verlassen?",
+    "Click 'Logout' below if you are ready to end your current session":"Klicke auf 'Abmelden' um die Session zu beenden",
     "Logout":"Abmelden",
     "Settings":"Einstellungen"
 }
