fix some spelling

--- a/locales/de.json
+++ b/locales/de.json
@@ -19,7 +19,7 @@
     "IV":"IV",
     "LEVEL":"Level",
     "meters":"Meter",
-    "Please set it in discord using":"Bitte setze es in Discord mit",
+    "Please set it in discord using":"Bitte setze es in Discord mit dem entsprechenden",
     "POKÉMONS":"POKÉMON",
     "POKÉMONS TRACKED":"POKÉMON TRACKED",
     "EGGS & RAIDS TRACKED":"EIER & RAIDS TRACKED",
@@ -61,7 +61,7 @@
     "AREAS":"GEBIETE",
     "Your alarms are currently disabled !":"Deine Alarme sind aktuell deaktiviert",
     "You Request couldn't not be handled":"Deine Eingabe konnte nicht verarbeitet werden",
-    "Your location is not set. Distance settings won't be taken into account.":"Dein Standort ist nicht gesetzt. Distanzen werden nicht berücksichtigt.",
+    "Your location is not set. Distance settings won't be taken into account.":"Dein Standort ist nicht gesetzt.</br> Distanzen werden nicht berücksichtigt.</br>",
     "Distance":"Distanz",
     "Form":"Form",
     "Gender":"Geschlecht",
@@ -78,7 +78,7 @@
     "to display all Pokémons":"um alle Pokémon anzuzeigen",
     "Search":"Suche",
     "Cancel":"Abbrechen",
-    "Submit":"Übermitteln",
+    "Submit":"Speichern",
     "NEW RAID ALARM":"NEUER RAID ALARM",
     "Select Egg Levels you want to add":"Wähle Ei Stufen aus, die du hinzufügen willst",
     "Select Raid Levels you want to add":"Wähle Raid Stufen aus, die du hinzufügen willst",
@@ -90,7 +90,7 @@
     "Or use search below to add another pokemon":"oder verwende die Suche um.ein anderes auszuwählen",
     "Select Quests Items you want to add":"Wählen ein Quest Item aus, dass du hinzufügen willst.",
     "Level": "Level",
-    "Update": "Update",
+    "Update": "Aktuallisieren",
     "Close":"Schließen",
     "Other":"Anderes",
     "Buy or Renew a Subscription": "Abonnement kaufen oder verlängern",
