no lowercase when uppercase

--- a/locales/de.json
+++ b/locales/de.json
@@ -15,9 +15,9 @@
     "Eggs":"Eier",
     "Eggs Level":"Eier Level",
     "Error":"Fehler",
-    "GREAT":"Super",
+    "GREAT":"SUPER",
     "IV":"IV",
-    "LEVEL":"Level",
+    "LEVEL":"LEVEL",
     "meters":"Meter",
     "Please set it in discord using":"Bitte setze es in Discord mit dem entsprechenden",
     "POKÉMONS":"POKÉMON",
