--- a/locales/de.json
+++ b/locales/de.json
@@ -74,7 +74,7 @@
     "No":"Nein",
     "Apply to all Pokémons":"Auf alle Pokémon anwenden",
     "NEW MONSTER ALARM":"NEUER POKÉMON ALARM",
-    "Type":"Typ",
+    "Type":"Tippe",
     "to display all Pokémons":"um alle Pokémon anzuzeigen",
     "Search":"Suche",
     "Cancel":"Abbrechen",
