--- a/locales/de.json
+++ b/locales/de.json
@@ -87,7 +87,7 @@
     "NEW QUEST ALARM":"NEUER QUEST ALARM",
     "Select Pokémon Quests you want to add (Pokemons Currently available on Map)":"Wähle Pokémon-Quests aus, die du hinzufügen willst",
     "Pokemons Currently available on Map":"Pokémon die aktuell auf der Map verfügbar sind",
-    "Or use search below to add another pokemon":"oder verwende die Suche um.ein anderes auszuwählen",
+    "Or use search below to add another pokemon":"oder verwende die Suche um ein anderes auszuwählen",
     "Select Quests Items you want to add":"Wählen ein Quest Item aus, dass du hinzufügen willst.",
     "Level": "Level",
     "Update": "Aktuallisieren",
