--- a/locales/de.json
+++ b/locales/de.json
@@ -106,7 +106,7 @@
     "ALL Quests Cleaning":"Alle Quests bereinigen",
     "Your Location is not set and cannot be set here!":"Dein Standort ist nicht festgelegt und kann hier nicht festgelegt werden!",
     "Your Location is set to":"Dein Standort lautet",
-    "You have not set any area yet!": "Du hast mich kein Gebiet gewählt!",
+    "You have not set any area yet!": "Du hast noch kein Gebiet gewählt!",
     "Save changes":"Änderungen speichern",
     "YOU ARE NOT REGISTERED!":"Du bist nicht registriert!",
     "Please Register in Discord using":"Bitte registriere dich in Discord mit",
