--- a/locales/fr.json
+++ b/locales/fr.json
@@ -83,7 +83,7 @@
     "Select Egg Levels you want to add":"Sélectionnez les Niveaux d'oeufs à ajouter",
     "Select Raid Levels you want to add":"Sélectionnez les Niveaux de Raids à ajouter",
     "Select Pokémon Quests you want to add":"Sélectionner les Pokémons de quêtes à ajouter",
-    "Select the Raid Bosses you want to add":"Sélectionnez les Raids de Boss à ajouter",
+    "Select the Raid Bosses you want to add":"Sélectionnez les Boss de Raids à ajouter",
     "NEW QUEST ALARM":"NOUVELLE ALARME DE QUÊTE",
     "Select Pokémon Quests you want to add (Pokemons Currently available on Map)":"Sélectionnez les niveaux de qûetes que vous voulez ajouter",
     "Pokemons Currently available on Map":"Pokémons actuellement sur la carte",
