--- a/locales/de.json
+++ b/locales/de.json
@@ -90,7 +90,7 @@
     "Or use search below to add another pokemon":"oder verwende die Suche um ein anderes auszuwählen",
     "Select Quests Items you want to add":"Wählen ein Quest Item aus, dass du hinzufügen willst.",
     "Level": "Level",
-    "Update": "Aktuallisieren",
+    "Update": "Aktualisieren",
     "Close":"Schließen",
     "Other":"Anderes",
     "Buy or Renew a Subscription": "Abonnement kaufen oder verlängern",
